refactor: staff api rpcs
